--- a/play.html
+++ b/play.html
@@ -429,18 +429,18 @@
       <div class="denotative">
         <div class="denotative-top">
           <div class="denotative-top-rows">
-            <div class="row1">
+            <div class="d-row1">
               <img src="img/play-vis41/dps1/v1.png" alt="">
               <img src="img/play-vis41/dps1/v2.png" alt="">
               <img src="img/play-vis41/dps1/v3.png" alt="">
               <img src="img/play-vis41/dps1/v4.png" alt="">
               <img src="img/play-vis41/dps1/v5.png" alt="">
             </div>
-            <div class="row2">
+            <div class="d-row2">
               <img src="img/play-vis41/dps1/v6.png" alt="">
               <img src="img/play-vis41/dps1/v7.png" alt="">
             </div>
-            <div class="row3">
+            <div class="d-row3">
               <img src="img/play-vis41/dps2/v1.png" alt="">
               <img src="img/play-vis41/dps2/v2.png" alt="">
               <img src="img/play-vis41/dps2/v3.png" alt="">
@@ -453,7 +453,7 @@
           </div>
         </div>
         <div class="denotative-bottom">
-          <div class="row4">
+          <div class="d-row4">
             <img src="img/play-vis41/dps2/v6.png" alt="">
             <img src="img/play-vis41/dps2/v7.png" alt="">
             <img src="img/play-vis41/dps2/v8.png" alt="">
@@ -461,7 +461,7 @@
             <img src="img/play-vis41/dps2/v10.png" alt="">
             <img src="img/play-vis41/dps2/v11.png" alt="">
           </div>
-          <div class="row5">
+          <div class="d-row5">
             <img src="img/play-vis41/dps3/v1.png" alt="">
             <img src="img/play-vis41/dps3/v2.png" alt="">
             <img src="img/play-vis41/dps3/v3.png" alt="">
@@ -475,6 +475,49 @@
       </div>
       <div class="image-title" id="vis41-title">
         <p><b>IMAGE MAKING</b></p>
+      </div>
+      <div class="image-top">
+        <div class="image-top-rows">
+          <div class="i-row1">
+            <img src="img/play-vis41/imps1/img1.png" alt="">
+            <img src="img/play-vis41/imps2/img2.png" alt="">
+            <img src="img/play-vis41/imps2/img3.png" alt="">
+            <img src="img/play-vis41/imps2/img1.png" alt="">
+          </div>
+          <div class="i-row2">
+            <img src="img/play-vis41/imps1/img6.png" alt="">
+            <img src="img/play-vis41/imps2/img7.png" alt="">
+            <img src="img/play-vis41/imps1/img3.png" alt="">
+            <img src="img/play-vis41/imps1/img11.png" alt="">
+          </div>
+          <div class="i-row3">
+            <img src="img/play-vis41/imps1/img2.png" alt="">
+            <img src="img/play-vis41/imps1/img4.png" alt="">
+            <img src="img/play-vis41/imps2/img8.png" alt="">
+            <img src="img/play-vis41/imps2/img9.png" alt="">
+            <img src="img/play-vis41/imps1/img5.png" alt="">
+          </div>
+        </div>
+        <div class="image-making-main">
+          <img src="img/play-vis41/final-image.png" alt="" id="image-making-main">
+        </div>
+      </div>
+      <div class="image-bottom">
+        <div class="i-row4">
+          <img src="img/play-vis41/imps1/img9.png" alt="">
+          <img src="img/play-vis41/imps2/img11.png" alt="">
+          <img src="img/play-vis41/imps2/img12.png" alt="">
+          <img src="img/play-vis41/imps2/img15.png" alt="">
+          <img src="img/play-vis41/imps2/img14.png" alt="">
+          <img src="img/play-vis41/imps1/img12.png" alt="">
+          <img src="img/play-vis41/imps1/img13.png" alt="">
+          <img src="img/play-vis41/imps1/img14.png" alt="">
+        </div>
+        <div class="i-row5">
+          <img src="img/play-vis41/imps1/img15.png" alt="">
+          <img src="img/play-vis41/imps1/img16.png" alt="">
+          <img src="img/play-vis41/imps1/img17.png" alt="">
+        </div>
       </div>
     </div>
     <div class="play-display" id="vis80">
