--- a/play.html
+++ b/play.html
@@ -521,7 +521,8 @@
       </div>
     </div>
     <div class="play-display" id="vis80">
-      <p>VIS 80 INTRO TO STUDIO</p>
+      <p><b>VIS 80</b> INTRO TO STUDIO</p>
+
     </div>
     <div class="play-display" id="dsgn1">
       <p>DSGN1 DESIGN OF EVERYDAY THINGS</p>
