--- a/play.html
+++ b/play.html
@@ -522,7 +522,74 @@
     </div>
     <div class="play-display" id="vis80">
       <p><b>VIS 80</b> INTRO TO STUDIO</p>
-
+      <div class="top-row">
+        <img src="img/play-vis80/img1.png" alt="">
+        <img src="img/play-vis80/img2.png" alt="">
+        <img src="img/play-vis80/img3.png" alt="" id="horizontal">
+        <img src="img/play-vis80/img4.png" alt="">
+        <img src="img/play-vis80/img5.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/img6.png" alt="">
+        <img src="img/play-vis80/img7.png" alt="">
+        <img src="img/play-vis80/img8.png" alt="">
+        <img src="img/play-vis80/img9.png" alt="">
+        <img src="img/play-vis80/img10.png" alt="">
+        <img src="img/play-vis80/img11.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 1-1.png" alt="">
+        <img src="img/play-vis80/SET 1-2.png" alt="">
+        <img src="img/play-vis80/SET 1-3.png" alt="">
+        <img src="img/play-vis80/SET 1-4.png" alt="">
+        <img src="img/play-vis80/SET 1-5.png" alt="">
+        <img src="img/play-vis80/SET 2-1.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 2-2.png" alt="">
+        <img src="img/play-vis80/SET 2-3.png" alt="">
+        <img src="img/play-vis80/SET 2-4.png" alt="">
+        <img src="img/play-vis80/SET 3-1.png" alt="">
+        <img src="img/play-vis80/SET 3-2.png" alt="">
+        <img src="img/play-vis80/SET 3-3.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 3-4.png" alt="">
+        <img src="img/play-vis80/SET 3-5.png" alt="">
+        <img src="img/play-vis80/SET 4-1.png" alt="">
+        <img src="img/play-vis80/SET 4-2.png" alt="">
+        <img src="img/play-vis80/SET 4-3.png" alt="">
+        <img src="img/play-vis80/SET 4-4.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 4-5.png" alt="">
+        <img src="img/play-vis80/SET 5-1.png" alt="">
+        <img src="img/play-vis80/SET 5-2.png" alt="">
+        <img src="img/play-vis80/SET 5-3.png" alt="">
+        <img src="img/play-vis80/SET 5-4.png" alt="">
+        <img src="img/play-vis80/SET 5-5.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 6-5.png" alt="">
+        <img src="img/play-vis80/SET 6-1.png" alt="">
+        <img src="img/play-vis80/SET 6-2.png" alt="">
+        <img src="img/play-vis80/SET 6-3.png" alt="">
+        <img src="img/play-vis80/SET 6-4.png" alt="">
+        <img src="img/play-vis80/SET 7-1.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 7-2.png" alt="">
+        <img src="img/play-vis80/SET 7-3.png" alt="">
+        <img src="img/play-vis80/SET 7-4.png" alt="">
+        <img src="img/play-vis80/SET 7-5.png" alt="">
+        <img src="img/play-vis80/SET 8-1.png" alt="">
+        <img src="img/play-vis80/SET 8-2.png" alt="">
+      </div>
+      <div class="row">
+        <img src="img/play-vis80/SET 8-3.png" alt="">
+        <img src="img/play-vis80/SET 8-4.png" alt="">
+        <img src="img/play-vis80/SET 8-5.png" alt="">
+      </div>
     </div>
     <div class="play-display" id="dsgn1">
       <p>DSGN1 DESIGN OF EVERYDAY THINGS</p>
