--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   </head>
 
@@ -32,7 +33,7 @@
     <div class="home-text">
           <h3>Hi, I'm Fiona, an</h3>
           <h1><span class="everyday">eve•ry•day</span> <span class="designer">de•sign•er</span></h1>
-          <h5>[ˈev.ri.deɪ dɪˈzaɪnər]</h5>
+          <h5>[ˈevrēˌdā  dəˈzīnər]</h5>
           <h4>someone who believes design is<br><span id="highlight">life-based</span> and <span id="highlight">ethically-oriented.</span></h4>
     </div>
 
@@ -78,7 +79,7 @@
          transform="matrix(1,0,0,1,13.9289215,16.285593900000002)" />
       <text
             xml:space="preserve"
-            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:60.2661px;line-height:0;font-family:'Arial Rounded MT Bold';-inkscape-font-specification:'Arial Rounded MT Bold, ';white-space:pre;inline-size:0;fill:#000000;fill-opacity:0;stroke:#ffffff;stroke-width:1.724;stroke-dasharray:none;stroke-opacity:1"
+            style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:60.2661px;line-height:0;font-family:'Arial';-inkscape-font-specification:'Arial';white-space:pre;inline-size:0;fill:#000000;fill-opacity:0;stroke:#ffffff;stroke-width:1.724;stroke-dasharray:none;stroke-opacity:1"
             x="89.290741"
             y="104.78748"
             id="work"
@@ -86,7 +87,7 @@
               id="tspan899"
               x="89.290741"
               y="104.78748"
-              style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:60.2661px;font-family:'Arial Rounded MT Bold';-inkscape-font-specification:'Arial Rounded MT Bold, ';stroke:#ffffff;stroke-width:1.724;stroke-dasharray:none;stroke-opacity:1">work</tspan></text>
+              style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:60.2661px;font-family:'Poppins';-inkscape-font-specification:'Poppins';stroke:#ffffff;stroke-width:1.724;stroke-dasharray:none;stroke-opacity:1">work</tspan></text>
     </a>
     <a href="play.html" class="svg">
       <path
@@ -104,7 +105,7 @@
            id="tspan899-4"
            x="89.290741"
            y="104.78748"
-           style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:60.2661px;font-family:'Arial Rounded MT Bold';-inkscape-font-specification:'Arial Rounded MT Bold, ';stroke:#ffffff;stroke-width:1.724;stroke-dasharray:none;stroke-opacity:1">play</tspan></text>
+           style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:60.2661px;font-family:'Poppins';-inkscape-font-specification:'Poppins';stroke:#ffffff;stroke-width:1.724;stroke-dasharray:none;stroke-opacity:1">play</tspan></text>
     </a>
     <a href="about.html" class="svg">
       <path
