--- a/work.html
+++ b/work.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -42,8 +43,8 @@
             <img class="uiexp1" src="img/ui-exp1.png">
           </div>
           <div class="wordrive-text">
-            <h1 class="experience-company">Wordrive</h3>
-            <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
+            <h1 class="experience-company">Wordrive</h1>
+            <h2 class="experience-subheading">Passion Project | Designer, Researcher</h2>
             <h3 class="experience-description">Making word storage and definition referencing easier for all readers alike.</h3>
             <button class="wordrive-button" type="button">View Project</button>
           </div>
@@ -51,8 +52,8 @@
               <img class="uiexp2" src="img/ui-exp2.png">
             </div>
             <div class="zoom-text">
-              <h1 class="experience-company">Zoom Redesign</h3>
-              <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
+              <h1 class="experience-company">Zoom Redesign</h1>
+              <h2 class="experience-subheading">Course Project | Designer, Researcher</h2>
               <h3 class="experience-description">Reinventing written communication on videotelephony platforms.</h3>
               <button class="zoom-button" type="button">View Case Study</button>
             </div>
@@ -73,8 +74,8 @@
             <img class="visexp1" src="img/vis-exp1.png">
           </div>
           <div class="wordrive-text">
-            <h1 class="experience-company">Wordrive</h3>
-            <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
+            <h1 class="experience-company">Wordrive</h1>
+            <h2 class="experience-subheading">Passion Project | Designer, Researcher</h2>
             <h3 class="experience-description">Making word storage and definition referencing easier for all readers alike.</h3>
             <button class="wordrive-button" type="button">View Project</button>
           </div>
@@ -82,8 +83,8 @@
               <img class="uiexp2" src="img/ui-exp2.png">
             </div>
             <div class="zoom-text">
-              <h1 class="experience-company">Zoom Redesign</h3>
-              <h2 class="experience-subheading">Course Project | Designer, Researcher</h1>
+              <h1 class="experience-company">Zoom Redesign</h1>
+              <h2 class="experience-subheading">Course Project | Designer, Researcher</h2>
               <h3 class="experience-description">Reinventing written communication on videotelephony platforms.</h3>
               <button class="zoom-button" type="button">View Case Study</button>
             </div>
@@ -98,7 +99,4 @@
         <i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i>
         <p class="footer-name">designed by Fiona Liu | 2022</p>
     </footer>
-
-
-  </body>
 </html>
