--- a/about.html
+++ b/about.html
@@ -3,12 +3,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/about-style.css">
     <link rel="stylesheet"
   href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Taviraj:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   </head>
   <header>
@@ -34,7 +35,7 @@
           after studying [Cognitive Science in Design and Interaction] and [Interdisciplinary Computing
            and the Arts] at the University of California, San Diego for my first year.<br><br>
          Though my roots are in the fine arts, I'm interested in <b>UX/UI and visual design</b>, particularly the niche of <b>ethics</b> within these designs!</p>
-        <h3><br><br><br><br></h3>
+        <h3><br><br></h3>
 
         <h3>my design philosophy...</h3>
 
