--- a/play.html
+++ b/play.html
@@ -14,7 +14,7 @@
   </head>
 
   <!--navbar-->
-  <header>
+  <header id="play-nav">
     <a href="index.html" class = "logo"> <img src="img/logo.png"> </a>
     <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -30,10 +30,10 @@
 
   <body id="play">
     <div class="play-nav">
-      <p class="play-nav-text"id="play-nav-text"><span id="fine" class="active" onclick="playTab(this)">fine</span> / <span id="digital" onclick="playTab(this)">digital</span> /
-        <span onclick="playTab(this)" id="multi">multi</span> / <span id="sketch" onclick="playTab(this)">sketch</span> /
-        <span id="course" onclick="playTab(this)">course</span> /
-        <span id="org" onclick="playTab(this)">org</span> / <span id="past" onclick="playTab(this)">past</span></p>
+      <p class="play-nav-text"id="play-nav-text"><span id="fine" class="active" onclick="playTab(this)">FINE</span> / <span id="digital" onclick="playTab(this)">DIGITAL</span> /
+        <span onclick="playTab(this)" id="multi">MULTI</span> / <span id="sketch" onclick="playTab(this)">SKETCH</span> /
+        <span id="course" onclick="playTab(this)">COURSE</span> /
+        <span id="org" onclick="playTab(this)">ORG</span> / <span id="past" onclick="playTab(this)">PAST</span></p>
     </div>
     <div class="play-sections">
       <div class="shown play-display">
