--- a/zoom.html
+++ b/zoom.html
@@ -411,4 +411,10 @@ meaning our user research down the road spanned a greater audience.
         </p>
     </div>
   </body>
+  <footer>
+    <p class=footer-chat>let's chat!</p>
+    <i class="fa fa-envelope" style="font-size:48px;color:#C77492"></i>
+    <i class="fa fa-linkedin-square" style="padding-left:25px;font-size:48px;color:#C77492"></i>
+    <p class="footer-name">designed by Fiona Liu | 2022</p>
+</footer>
 </html>
