--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <h1 class="experience-company">Wordrive</h3>
         <h2 class="experience-subheading">Passion Project | Designer, Researcher</h1>
         <h3 class="experience-description">Making word storage and definition referencing easier for all readers alike.</h3>
-        <button class="wordrive-button" type="button">View Project</button>
+        <button id="clickable"class="wordrive-button" type="button">View Project</button>
       </div>
     </div>
     <div class="exp">
