--- a/zoom.html
+++ b/zoom.html
@@ -55,7 +55,7 @@
     <div class="case-study">
       <h1>Course Introduction + Prefaces</h1>
       <p>This project was the fourth and final undertaking of the course <b>DSGN 1: Design of Everyday Things</b>, taught by Professor Michael Meyers at the University of California, San Diego.
-Centered around UCSD’s own Design Lab Director Don Norman’s The Design of Everyday Things, the course sought to challenge its students through
+Centered around UCSD’s own Design Lab Director Don Norman’s <a href="https://mitpress.mit.edu/9780262640374/the-design-of-everyday-things/">The Design of Everyday Things</a>, the course sought to challenge its students through
 applying cognitive science principles to the design of both simple and complex technology. Students were introduced to foundational concepts
 such as affordances, constraints, mappings, and conceptual models, and asked to apply their understanding of these concepts, along
 with their observational and design skills, through a sequence of four group projects that reimagined everything from sparkwheel lighters to gear shifts to video chat interfaces.
@@ -250,7 +250,7 @@ meaning our user research down the road spanned a greater audience.
         <h3><b>Compactness</b> is how condensed the chat feature is, and how much space it leaves for the video interface.<br>
           <b>Interchangeability</b> is how easy it is to navigate between different conversations.
         </h3>
-        <img src="img/zoom/CvI.png" alt="" class="table">
+        <img src="img/zoom/zoomchart1.png" alt="" class="table">
         <br>
         <img src="img/zoom/CvIgraph.png" alt="" class="graph">
         <h2><i>Clarity vs Aesthetic</i></h2>
@@ -258,7 +258,7 @@ meaning our user research down the road spanned a greater audience.
           <b>Aesthetic</b> is how appealing the design of the interface is. It also accounts for how customizable the application is.
 
         </h3>
-        <img src="img/zoom/CvA.png" alt="" class="table">
+        <img src="img/zoom/zoomchart2.png" alt="" class="table">
         <br>
         <img src="img/zoom/CvAgraph.png" alt="" class="graph">
 
