--- a/play.html
+++ b/play.html
@@ -602,6 +602,40 @@
       <div class="play-display">
         <div id="dsgn1">
           <p><b>DSGN1</b> DESIGN OF EVERYDAY THINGS</p>
+          <div class="project" id="journal">
+            <div class="project-img">
+              <img src="img/dsgn1journal.png" alt="">
+            </div>
+            <div class="dsgn1-text">
+              <h1>JOURNAL</h1>
+            </div>
+          </div>
+          <div class="project" id="journal">
+            <div class="project-img">
+              <img src="img/dsgn1p1.png" alt="">
+            </div>
+            <div class="dsgn1-text">
+              <h1>PROJECT1:</h1><br><h2>GEARSTICK</h2>
+              <br>
+              <h3>Collaborator: Yanhao Ji</h3>
+            </div>
+          </div>
+          <div class="project" id="journal">
+            <div class="project-img">
+              <img src="img/dsgn1p2.png" alt="">
+            </div>
+            <div class="dsgn1-text">
+              <h1>JOURNAL</h1>
+            </div>
+          </div>
+          <div class="project" id="journal">
+            <div class="project-img">
+              <img src="img/dsgn1p3.png" alt="">
+            </div>
+            <div class="dsgn1-text">
+              <h1>JOURNAL</h1>
+            </div>
+          </div>
         </div>
       </div>
       <div class="play-display">
