--- a/play.html
+++ b/play.html
@@ -604,15 +604,19 @@
           <p><b>DSGN1</b> DESIGN OF EVERYDAY THINGS</p>
           <div class="project" id="journal">
             <div class="project-img">
-              <img src="img/dsgn1journal.png" alt="">
+              <a href="https://docs.google.com/document/d/1kUp1e1UBtQaVxh-mkO-6dBqCKN5_ZFcA0Sj-zeyPSi0/edit?usp=sharing">
+                <img src="img/dsgn1journal.png" alt="">
+              </a>
             </div>
             <div class="dsgn1-text">
               <h1>JOURNAL</h1>
             </div>
           </div>
-          <div class="project" id="journal">
+          <div class="project" id="project1">
             <div class="project-img">
-              <img src="img/dsgn1p1.png" alt="">
+              <a href="https://docs.google.com/document/d/1dq1oe_SUes5VuQznlMnYbzSozVNBg5VqVPoj2zijV5s/edit?usp=sharing">
+                <img src="img/dsgn1p1.png" alt="">
+              </a>
             </div>
             <div class="dsgn1-text">
               <h1>PROJECT1:</h1><br><h2>GEARSTICK</h2>
@@ -620,20 +624,43 @@
               <h3>Collaborator: Yanhao Ji</h3>
             </div>
           </div>
-          <div class="project" id="journal">
+          <div class="project" id="project2">
             <div class="project-img">
-              <img src="img/dsgn1p2.png" alt="">
+              <a href="https://docs.google.com/document/d/1EP_iqBatE0tW7ObFYBePgts10LRH01Pszo436aAJT5A/edit?usp=sharing">
+                <img src="img/dsgn1p2.png" alt="">
+              </a>
+
             </div>
             <div class="dsgn1-text">
-              <h1>JOURNAL</h1>
+              <h1>PROJECT2:</h1><br><h2>LIGHTER</h2>
+              <br>
+              <h3>Collaborators: Kexin Cheng, Tengyue Wang, Rajvir Logani</h3>
             </div>
           </div>
-          <div class="project" id="journal">
+          <div class="project" id="project3">
             <div class="project-img">
-              <img src="img/dsgn1p3.png" alt="">
+              <a href="https://docs.google.com/document/d/13gZjKYcNTKh0yeZFAsbx_GH3Urv7WUZFf8358d-W_7Y/edit?usp=sharing">
+                <img src="img/dsgn1p3.png" alt="">
+              </a>
+
             </div>
             <div class="dsgn1-text">
-              <h1>JOURNAL</h1>
+              <h1>PROJECT3:</h1><br><h2>CARKEYS</h2>
+              <br>
+              <h3>Collaborators: Aaron Sotzen, Karina Chen, Sunay Bargotra, Valen Potloff</h3>
+            </div>
+          </div>
+          <div class="project" id="final">
+            <div class="project-img">
+              <a href="zoom.html">
+                <img src="img/dsgn1p3.png" alt="">
+              </a>
+
+            </div>
+            <div class="dsgn1-text">
+              <h1>FINAL PROJECT:</h1><br><h2>ZOOM</h2>
+              <br>
+              <h3>Collaborators: Rajvir</h3>
             </div>
           </div>
         </div>
