--- a/zoom.html
+++ b/zoom.html
@@ -69,9 +69,10 @@ with their observational and design skills, through a sequence of four group pro
         “gain additional experience seeing as a designer by identifying problems with the design of
         a common everyday object, apply the ideas of conceptual models and gulfs of execution
         and evaluation in your analysis of the object, and start to develop experience with feeding
-        the ideation process” (Projects 1 and 2), and designing for error by
+        the ideation process” (Projects <a href="https://docs.google.com/document/d/1dq1oe_SUes5VuQznlMnYbzSozVNBg5VqVPoj2zijV5s/edit?usp=sharing">1</a>
+         and <a href="https://docs.google.com/document/d/1EP_iqBatE0tW7ObFYBePgts10LRH01Pszo436aAJT5A/edit?usp=sharing">2</a>), and designing for error by
         “reducing the opportunities to make errors”, “accepting that people will make errors and providing
-        ways to mitigate their impact and recover from them” (Project 3).
+        ways to mitigate their impact and recover from them” (<a href="https://docs.google.com/document/d/1omg3it6Y9Tqp0vduFeoGwbR39gQgJINosXBI6-QXyEM/edit?usp=sharing">Project 3</a>).
       </p>
       <p>Essentially, we were tasked to make improvements to an existing digital or physical interface that we saw fit.<br>
       </p>
@@ -89,7 +90,7 @@ with their observational and design skills, through a sequence of four group pro
         physical redesigns (take a look at our previous physical redesigns <a href="ADD LINK">here</a>!)
       </p>
       <img src="img/zoom/mindmap.png" alt="" id="mindmap">
-      <a href="MIND MAP LINK" id="mindmap-text">View our mindmap!</a>
+      <a href="https://miro.com/app/board/uXjVOMK45uU=/?share_link_id=833394764671" id="mindmap-text">View our mindmap!</a>
       <h2><br>Landing on a Design Issue and Preliminary User Research</h2>
       <p>We landed on two options that were both familiar to us as students and offered a narrow enough
         scope such that we could really hone in on individual features: <b>Zoom</b>, a widely used video
@@ -137,7 +138,7 @@ meaning our user research down the road spanned a greater audience.
        <p>As mentioned, we had to conduct two stages of interviews, as our initial
          scope ended up being too broad. I’ll mainly be explaining the questions from
          Stage 2 because those were the finalized ones used for data collection on the chat,
-         but Stage 1 Questions can be found <a href="ADD LINK">here</a>. We included General Questions, Task-Based Questions,
+         but Stage 1 Questions can be found <a href="https://docs.google.com/document/d/1HpL9zAA591KVQvtOpyFdQ07ZHmkHTZGh7kwjZHUqezw/edit?usp=sharing">here</a>. We included General Questions, Task-Based Questions,
          and Post-Task Questions. While the interviewee was on call, we asked them to show us their
          screen and actions using another device, and we recorded their answers on a Google Form, following a master-apprentice model.
        </p>
@@ -151,9 +152,9 @@ meaning our user research down the road spanned a greater audience.
        </p>
        <h2>Stage 2 Chat Interview Questions</h2>
        <img src="img/zoom/stage2qs.png" alt="" id="stage2qs">
-       <p>We interviewed participants and recorded them on this form: <a href="LINK">Interview Form</a></p>
+       <p>We interviewed participants and recorded them on this form: <a href="https://forms.gle/vPuu8yUijCw1akWm7">Interview Form</a></p>
        <h2>Raw Data</h2>
-       <p><a href="https://docs.google.com/document/u/0/d/1XVyHNlaM3Ch_P4R673wQ5aS7F3wxXeXZWS2khktq9n8/edit">Group Draft Interview Questions</a><br>Our start-up draft questions before we create the actual interview form<br><br>
+       <p><a href="https://docs.google.com/document/d/1XVyHNlaM3Ch_P4R673wQ5aS7F3wxXeXZWS2khktq9n8/edit?usp=sharing">Group Draft Interview Questions</a><br>Our start-up draft questions before we create the actual interview form<br><br>
          <a href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #1 Google Form</a><br>Questions that focused on all communication functions of Zoom<br><br>
          <a href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #2 Google Form</a><br>Fixed interview questions used for interviews<br><br>
          <a href="https://docs.google.com/spreadsheets/d/1-P6zRMImYbeLLXHDc5Iy9mViqoBeSDhEjuM6D0eBHhE/edit?usp=sharing">Zoom User Research Responses</a><br>Final Google Sheet collected from interviews and used to complete analysis<br><br>
@@ -236,7 +237,7 @@ meaning our user research down the road spanned a greater audience.
         <img src="img/zoom/chat3.png" alt="" id="chat3">
         <h2>Recap</h2>
         <p>Watch a recap of the Problems + Trends, put in the context of realistic scenarios!</p>
-        <p>PUT IN YOUTUBE LINK HERE</p>
+        <p><a href="https://youtu.be/anfKyUj0KQo">https://youtu.be/anfKyUj0KQo</a></p>
 
         <h1>Redesign</h1>
         <h2>Competitors</h2>
